# 3d_slam_and_object_detection

./: .gitignore  README.md
jackal_3d_slam/: CMakeLists.txt  README.md  package.xml
jackal_3d_slam/config/: filter_params.yaml  nav2_params.yaml
jackal_3d_slam/launch/: filtered_velodyne.launch.py  jackal_nav.launch.py  jackal_nav.launch.xml  jackal_simulation.launch.xml  jackal_transform.launch.py  object_detection.launch.xml  pointcloud_processing.launch.xml  start_3d_slam.launch.xml  velodyne.launch.py
jackal_3d_slam/scripts/: object_detection.py
jackal_3d_slam/src/: point_cloud_processing.cpp  pointcloud_processing.cpp
